syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;

service EventStudentService {
    rpc Create(CreateEventStudent) returns (GetEventStudent) {}
    rpc GetByID(EventStudentPrimaryKey) returns (GetEventStudent) {}
    rpc GetList(GetListEventStudentRequest) returns (GetListEventStudentResponse) {}
    rpc Update(UpdateEventStudent) returns (GetEventStudent) {}
    rpc Delete(EventStudentPrimaryKey) returns (EmptyEventStudent) {}
}

message EmptyEventStudent {}

message EventStudentPrimaryKey {
    string id = 1;
}

message CreateEventStudent {
    string eventId = 2;
    string studentId = 3;
}

message EventStudent {
    string id = 1;
    string eventId = 2;
    string studentId = 3;
    string created_at = 4;
    string updated_at = 5;
    int32 deleted_at = 6;
}

message GetEventStudent {
    string id = 1;
    string eventId = 2;
    string studentId = 3;
    string created_at = 4;
    string updated_at = 5;
    int32 deleted_at = 6;
}

message UpdateEventStudent {
    string id = 1;
    string eventId = 2;
    string studentId = 3;
}

message GetListEventStudentRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListEventStudentResponse {
    int64 count = 1;
    repeated EventStudent eventStudents = 2;
}
